fix reader horizontal scroll

--- a/src/articles/reader.sass
+++ b/src/articles/reader.sass
@@ -31,6 +31,7 @@
     margin: auto
     padding: 30px
     overflow-y: scroll
+    overflow-x: hidden
     background: white
     color: black
     height: 90vh
